# YesCommander

./: .pre-commit-config.yaml  MANIFEST.in  README.md  setup.cfg  setup.py
scripts/: yc
shell_helper/: zsh_helper.zsh
test/: test_custom.py  test_yc.py  yc_app.py  yc_googler.py
test/yc_config/: yc_rc.py
yescommander/: __core__.py  __init__.py  _core.py  builtin.py  commander.py  core.py  gui.py  styled_str.py  theme.py  xdg.py
yescommander/cli/: __init__.py  app.py  utils.py
yescommander/example/: rc.py  yc_rc.py
yescommander/stubs/: yc_rc.pyi
