[tool:pytest]
required_plugins = pytest-html pytest-cov pytest-ordering pytest-xdist
;addopts = --cov --cov-report html --cov-report term

[flake8]
ignore = E203, E266, E501, W503, F403, E402, F401, F811
max-line-length = 88

[mypy]
mypy_path = yescommander/stubs
ignore_missing_imports = True
allow_redefinition = True

[metadata]
name = yescommander
version = 0.1.0
author = Shen Zhou
author_email = shen34206@hotmail.com
description = YesCommander is a fully customizable command line searching interface.
url = https://github.com/szsdk/YesCommander
license = GPLv3

[options]
include_package_data = True
packages = find:
install_requires =
  prompt_toolkit
  pyperclip


[options.entry_points]
console_scripts =
  yc = yescommander.cli:_main

[options.extras_require]
test =
    pytest
